app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

:root {
	--background: #050505;
	--foreground: #ededed;
}

@theme inline {
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--font-great-vibes: var(--font-great-vibes);
	--font-urbanist: var(--font-urbanist);
	--color-sidebar-ring: var(--sidebar-ring);
	--color-sidebar-border: var(--sidebar-border);
	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
	--color-sidebar-accent: var(--sidebar-accent);
	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
	--color-sidebar-primary: var(--sidebar-primary);
	--color-sidebar-foreground: var(--sidebar-foreground);
	--color-sidebar: var(--sidebar);
	--color-chart-5: var(--chart-5);
	--color-chart-4: var(--chart-4);
	--color-chart-3: var(--chart-3);
	--color-chart-2: var(--chart-2);
	--color-chart-1: var(--chart-1);
	--color-ring: var(--ring);
	--color-input: var(--input);
	--color-border: var(--border);
	--color-destructive: var(--destructive);
	--color-accent-foreground: var(--accent-foreground);
	--color-accent: var(--accent);
	--color-muted-foreground: var(--muted-foreground);
	--color-muted: var(--muted);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-secondary: var(--secondary);
	--color-primary-foreground: var(--primary-foreground);
	--color-primary: var(--primary);
	--color-popover-foreground: var(--popover-foreground);
	--color-popover: var(--popover);
	--color-card-foreground: var(--card-foreground);
	--color-card: var(--card);
	--radius-sm: calc(var(--radius) - 4px);
	--radius-md: calc(var(--radius) - 2px);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) + 4px);
	--radius-2xl: calc(var(--radius) + 8px);
	--radius-3xl: calc(var(--radius) + 12px);
	--radius-4xl: calc(var(--radius) + 16px);
}

/* @media (prefers-color-scheme: dark) {
	:root {
		--background: #000000;
		--foreground: #ededed;
	}
} */

* {
	box-sizing: border-box;
}

body {
	background-color: var(--color-background);
	color: var(--color-foreground);
	font-family: var(--font-urbanist);
	scroll-behavior: smooth;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

::-webkit-scrollbar {
	width: 5px;
	height: 8px;
}

::-webkit-scrollbar-track {
	background: var(--color-background);
	border-radius: 10px;
}

::-webkit-scrollbar-thumb {
	background: var(--color-foreground);
	border-radius: 10px;
}

.threed-effect {
	box-shadow:
		inset 0 4px 6px -1px rgba(0, 0, 0, 0.5),
		inset 0 -1px 2px 0 rgba(255, 255, 255, 0.1),
		0 4px 6px -1px rgba(0, 0, 0, 0.4);

	background: linear-gradient(
		145deg,
		rgba(255, 255, 255, 0.05) 0%,
		rgba(0, 0, 0, 0.1) 100%
	);
}

/* Loader Styles */
#signature-name {
	animation: fill 2s ease forwards 5s;
}

#signature-name path {
	stroke: transparent;
}

#signature-name path:nth-child(1) {
	animation: line-anim 2s ease forwards 4.5s;
}
#signature-name path:nth-child(2) {
	animation: line-anim 2s ease forwards 4.2s;
}
#signature-name path:nth-child(3) {
	animation: line-anim 2s ease forwards 3.9s;
}
#signature-name path:nth-child(4) {
	animation: line-anim 2s ease forwards 3.6s;
}
#signature-name path:nth-child(5) {
	animation: line-anim 2s ease forwards 3.3s;
}
#signature-name path:nth-child(6) {
	animation: line-anim 2s ease forwards 3s;
}
#signature-name path:nth-child(7) {
	animation: line-anim 2s ease forwards 2.7s;
}
#signature-name path:nth-child(8) {
	animation: line-anim 2s ease forwards 2.4s;
}
#signature-name path:nth-child(9) {
	animation: line-anim 2s ease forwards 2.1s;
}
#signature-name path:nth-child(10) {
	animation: line-anim 2s ease forwards 1.8s;
}
#signature-name path:nth-child(11) {
	animation: line-anim 2s ease forwards 1.5s;
}
#signature-name path:nth-child(12) {
	animation: line-anim 2s ease forwards 1.2s;
}
#signature-name path:nth-child(13) {
	animation: line-anim 2s ease forwards 0.9s;
}
#signature-name path:nth-child(14) {
	animation: line-anim 2s ease forwards 0.6s;
}
#signature-name path:nth-child(15) {
	animation: line-anim 2s ease forwards 0.3s;
}
#signature-name path:nth-child(16) {
	animation: line-anim 2s ease forwards 0s;
}

.subtitle {
	color: white;
	text-align: center;
	opacity: 0;
	animation: fadeIn 2s ease forwards 5s;
}

@keyframes line-anim {
	to {
		stroke-dashoffset: 0;
	}
}

@keyframes fill {
	from {
		fill: transparent;
	}
	to {
		fill: white;
	}
}
@keyframes fadeIn {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

/* Hero Styles */
@keyframes strokePulse {
	0% {
		-webkit-text-stroke-color: rgba(255, 255, 255, 0.03);
	}
	50% {
		-webkit-text-stroke-color: rgba(255, 255, 255, 0.05);
	}
	100% {
		-webkit-text-stroke-color: rgba(255, 255, 255, 0.03);
	}
}

@keyframes mouse-wheel {
	0% {
		transform: translateY(0);
		opacity: 1;
	}
	80% {
		transform: translateY(18px);
		opacity: 0;
	}
	100% {
		transform: translateY(0);
		opacity: 0;
	}
}

.animate-mouse-wheel {
	animation: mouse-wheel 2s cubic-bezier(0.76, 0, 0.24, 1) infinite;
}

@keyframes wave-animation {
	0% {
		transform: rotate(0deg);
	}
	10% {
		transform: rotate(14deg);
	} /* The hand leans back */
	20% {
		transform: rotate(-8deg);
	} /* The hand leans forward */
	30% {
		transform: rotate(14deg);
	}
	40% {
		transform: rotate(-4deg);
	}
	50% {
		transform: rotate(10deg);
	}
	60% {
		transform: rotate(0deg);
	} /* Return to center */
	100% {
		transform: rotate(0deg);
	} /* Pause until the next loop */
}

.animate-wave {
	animation: wave-animation 2.5s infinite;
	transform-origin: 70% 70%; /* Sets the pivot point to the 'wrist' */
	display: inline-block;
}

